added insta m-0 auto

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -20,3 +20,8 @@ html {
 .txt_s_font {
   font-family: "Oswald", sans-serif;
 }
+
+/* InstagramEmbed.css */
+#instagram-embed-0 {
+  margin: 0 auto !important;
+}
